# ARENASL

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  docker-entrypoint.sh  index.html  package-lock.json  package.json  vite.config.ts
backend/: requirements-build.txt  requirements-train.txt  requirements.txt
backend/asl/: dtw.py  embedding_matcher.py  features.py  matcher.py  schema.py  session.py
backend/server/: app.py  connection.py  prompts.py
backend/tests/: test_app.py  test_augment.py  test_connection.py  test_dataset.py  test_dtw.py  test_embedding_matcher.py  test_enroll.py  test_integration.py  test_matcher.py  test_model.py  test_prompts.py  test_schema.py  test_session.py  test_train.py
backend/train/: augment.py  dataset.py  enroll.py  model.py  train.py
server/: .gitignore  Dockerfile  Dockerfile.train  TRAINING.md  pyproject.toml
server/app/: config.py  connection_manager.py  db.py  elo.py  lifespan.py  lobby.py  main.py  match.py  matchmaking.py  messages.py  models_db.py  recognition.py  replay.py  results.py  signaling.py  state.py  turn.py  warmup.py  words.py
server/app/auth/: deps.py  routes.py  schemas.py  security.py
server/app/data/: signs.json
server/app/ws/: endpoint.py  handlers.py
server/asl/: embedding_matcher.py  library.py  matcher.py  schema.py  session.py
server/tests/: conftest.py  test_auth.py  test_clips.py  test_elo.py  test_lobby.py  test_lobby_handlers.py  test_match_damage.py  test_match_flow.py  test_matchmaking.py  test_practice.py  test_recognition.py  test_reconnect.py  test_replay.py  test_results.py  test_signaling.py  test_train.py  test_turn.py  test_words.py  test_ws_auth.py
server/tests/asl/: test_embedding_matcher.py  test_features.py  test_library.py  test_session.py
server/train/: augment.py  dataset.py  enroll.py  model.py  run_full.sh  train.py
src/: camera.ts  landmarks.test.ts  landmarks.ts  main.ts  net.test.ts  net.ts  overlay.test.ts  overlay.ts  style.css
src/app/: router.ts
src/audio/: sound.ts
src/game/: mockDriver.ts  netMatch.ts  practiceDriver.ts  replay.ts  scoring.ts  signAssets.ts  signCapture.ts  store.ts  types.ts  words.ts
src/net/: auth.ts  mockClient.ts  protocol.ts  wsClient.ts
src/ui/: capture.ts  coach.ts  coverFit.ts  hud.ts  practice.ts  results.ts  vfx.ts
src/ui/filters/: presets.ts  (+1 more)
(+22 files in other folders)
