[project]
name = "arenasl-server"
version = "0.1.0"
description = "ARENASL backend: lobby, matchmaking, signaling, authoritative match, replay ingest"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.11",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",      # backs pydantic EmailStr
    "sqlalchemy>=2.0.40",
    "pwdlib[argon2]>=0.2.1",     # argon2 password hashing (modern passlib replacement)
    "pyjwt>=2.9",                # JWT (maintained; python-jose is abandoned)
    "python-multipart>=0.0.9",   # OAuth2PasswordRequestForm needs form parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-timeout>=2.3",       # backstop so a stuck socket can't hang the suite
    "httpx>=0.27",               # FastAPI TestClient
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--timeout=30"

[tool.setuptools.packages.find]
include = ["app*"]
